add new test http endpoints
